# testhub

./: Dockerfile  README.md  calculator.py  ci_trigger.sh  compose.test.yml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci.yml  compose.test.yml
src/scicalc/: __init__.py  __main__.py  core.py  web.py
src/scicalc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/scicalc/static/: app.js  index.html  style.css
tests/: test_core.py  test_web.py
